<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".AddIncome">

    <Button
        android:id="@+id/btnAddIncome2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:layout_marginBottom="25dp"
        android:text="@string/add_income"
        android:textColor="@color/income_green"
        android:textColorLink="@color/income_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/income_green"
        app:strokeWidth="3dp" />

    <ImageView
        android:id="@+id/logoImg3"
        android:layout_width="95dp"
        android:layout_height="106dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/income"
        android:textColor="#fff"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="168dp"
        android:text="@string/add_income_page_message"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addIncomeAmount"
        android:layout_width="303dp"
        android:layout_height="81dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/default_grey"
        android:textColorHint="@color/default_grey"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/incomeRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIncomeAmount">

        <RadioButton
            android:id="@+id/radioSalary"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/salary"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioInterest"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/interest"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioSavings"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/savings"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>